feat: CourseFixture 에 Course 엔티티 관련 변경사항 반영